Finish Gray Section

--- a/index.html
+++ b/index.html
@@ -7,30 +7,49 @@
     <title>Landing Page</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<div class="main">    
+
     <div class="header">
-        <a href="index.html">Header Logo</a>
-        <a href="#">Header Link One</a>
-        <a href="#">Header Link Two</a>
-        <a href="#">Header Link Three</a>
+        <div class="header-logo">
+            <a href="index.html">Header Logo</a>
+        </div>
+        <div class="links">
+            <a href="#">Header Link One</a>
+            <a href="#">Header Link Two</a>
+            <a href="#">Header Link Three</a>
+        </div>
     </div>
     <div class="top-section">
-        <h1>This website is awesome</h1>
-        <p>Some dummy text here for now</p>
-        <button>Sign Up</button>
-        <img src="#" alt="No img here for now">
+        <div class="top-section-text">
+            <h1>This website is awesome</h1>
+            <p>Some dummy text here for now. And a little bit more dummy text, for clearance purpose</p>
+            <button>Sign Up</button>
+        </div>
+        <div class="top-section-image">
+            <img src="https://images.unsplash.com/photo-1511300636408-a63a89df3482?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8d2FsbHBhcGVyfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60" alt="No img here for now">
+        </div>
     </div>
+
+    <div class="picture-section-header"><h2>Something here</h2></div>
     <div class="pic-section">
-        <h2>Something here</h2>
-        <img src="#" alt="Not img here for now">
-        <p>text</p>
-        <img src="#" alt="Not img here for now">
-        <p>text</p>
-        <img src="#" alt="Not img here for now">
-        <p>text</p>
-        <img src="#" alt="Not img here for now">
-        <p>text</p>
+        <div class="pic">
+            <img src="https://images.unsplash.com/photo-1508921912186-1d1a45ebb3c1?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8cGhvdG98ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60" alt="Not img here for now">
+            <p>The text under the picture that I made much and much and much longer so yeah</p>
+        </div>
+        <div class="pic">
+            <img src="https://images.unsplash.com/photo-1508921912186-1d1a45ebb3c1?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8cGhvdG98ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60" alt="Not img here for now">
+            <p>The text under the picture that I made much and much and much longer so yeah</p>
+        </div>
+        <div class="pic">
+            <img src="https://images.unsplash.com/photo-1508921912186-1d1a45ebb3c1?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8cGhvdG98ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60" alt="Not img here for now">
+            <p>The text under the picture that I made much and much and much longer so yeah</p>
+        </div>
+        <div class="pic">
+            <img src="https://images.unsplash.com/photo-1508921912186-1d1a45ebb3c1?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8cGhvdG98ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60" alt="Not img here for now">
+            <p>The text under the picture that I made much and much and much longer so yeah</p>
+        </div>
     </div>
+
     <div>
         <p>"THis is a quote. Little bit longer."</p>
         <p>And this is who I quoted</p>
@@ -45,5 +64,6 @@
     <div class="footer">
         Copyright stuff
     </div>
+</div>
 </body>
 </html>
