Finish Picture Section and Quote Section

--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <title>Landing Page</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<div class="main">    
-
+<body>
+    <div class="main">    
+                                                        <!-- Header -->
     <div class="header">
         <div class="header-logo">
             <a href="index.html">Header Logo</a>
@@ -30,29 +31,42 @@
         </div>
     </div>
 
+                                                    <!-- Picture Section -->
+
     <div class="picture-section-header"><h2>Something here</h2></div>
     <div class="pic-section">
         <div class="pic">
             <img src="https://images.unsplash.com/photo-1508921912186-1d1a45ebb3c1?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8cGhvdG98ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60" alt="Not img here for now">
-            <p>The text under the picture that I made much and much and much longer so yeah</p>
+            <p>The text under the picture that I made much and much and much longer</p>
         </div>
         <div class="pic">
             <img src="https://images.unsplash.com/photo-1508921912186-1d1a45ebb3c1?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8cGhvdG98ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60" alt="Not img here for now">
-            <p>The text under the picture that I made much and much and much longer so yeah</p>
+            <p>The text under the picture that I made much and much and much longer</p>
         </div>
         <div class="pic">
             <img src="https://images.unsplash.com/photo-1508921912186-1d1a45ebb3c1?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8cGhvdG98ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60" alt="Not img here for now">
-            <p>The text under the picture that I made much and much and much longer so yeah</p>
+            <p>The text under the picture that I made much and much and much longer</p>
         </div>
         <div class="pic">
             <img src="https://images.unsplash.com/photo-1508921912186-1d1a45ebb3c1?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8cGhvdG98ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60" alt="Not img here for now">
-            <p>The text under the picture that I made much and much and much longer so yeah</p>
+            <p>The text under the picture that I made much and much and much longer</p>
         </div>
     </div>
+                                                
+                                                    <!-- Quote Section -->
 
-    <div>
-        <p>"THis is a quote. Little bit longer."</p>
-        <p>And this is who I quoted</p>
+    <div class="quote-section">
+        <div class="quote-section-text">
+            <p class="quote">
+                <em>
+                "This is a quote. The quote that i made a little bit longer. 
+                And a little bit more... 
+                Still like not enough.
+                It's a good idea to add a little bit more text here."
+                </em>
+            </p>
+            <p class="quotee">-and this is Who I Quoted</p>
+        </div>
     </div>
     <div class="signup-section">
         <div class="in-signup">
@@ -61,6 +75,9 @@
             <button>The button</button>
         </div>
     </div>
+                                        
+                                                        <!-- Footer -->
+
     <div class="footer">
         Copyright stuff
     </div>
