Finish Blue-Colored Section and Footer

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,400;0,600;0,700;0,900;1,200&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="main">    
@@ -27,7 +30,7 @@
             <button>Sign Up</button>
         </div>
         <div class="top-section-image">
-            <img src="https://images.unsplash.com/photo-1511300636408-a63a89df3482?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8d2FsbHBhcGVyfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60" alt="No img here for now">
+            <img src="https://images.unsplash.com/photo-1511300636408-a63a89df3482?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8d2FsbHBhcGVyfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60" alt="Purple sunset. A mountain in the back of the picture with a lake in the front.">
         </div>
     </div>
 
@@ -36,19 +39,19 @@
     <div class="picture-section-header"><h2>Something here</h2></div>
     <div class="pic-section">
         <div class="pic">
-            <img src="https://images.unsplash.com/photo-1508921912186-1d1a45ebb3c1?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8cGhvdG98ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60" alt="Not img here for now">
+            <img src="https://images.unsplash.com/photo-1508921912186-1d1a45ebb3c1?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8cGhvdG98ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60" alt="Autumn. There is a person with a backpack walking on the road in in the forest.">
             <p>The text under the picture that I made much and much and much longer</p>
         </div>
         <div class="pic">
-            <img src="https://images.unsplash.com/photo-1508921912186-1d1a45ebb3c1?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8cGhvdG98ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60" alt="Not img here for now">
+            <img src="https://images.unsplash.com/photo-1508921912186-1d1a45ebb3c1?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8cGhvdG98ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60" alt="Autumn. There is a person with a backpack walking on the road in in the forest.">
             <p>The text under the picture that I made much and much and much longer</p>
         </div>
         <div class="pic">
-            <img src="https://images.unsplash.com/photo-1508921912186-1d1a45ebb3c1?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8cGhvdG98ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60" alt="Not img here for now">
+            <img src="https://images.unsplash.com/photo-1508921912186-1d1a45ebb3c1?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8cGhvdG98ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60" alt="Autumn. There is a person with a backpack walking on the road in in the forest.">
             <p>The text under the picture that I made much and much and much longer</p>
         </div>
         <div class="pic">
-            <img src="https://images.unsplash.com/photo-1508921912186-1d1a45ebb3c1?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8cGhvdG98ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60" alt="Not img here for now">
+            <img src="https://images.unsplash.com/photo-1508921912186-1d1a45ebb3c1?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8cGhvdG98ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60" alt="Autumn. There is a person with a backpack walking on the road in in the forest.">
             <p>The text under the picture that I made much and much and much longer</p>
         </div>
     </div>
@@ -65,21 +68,26 @@
                 It's a good idea to add a little bit more text here."
                 </em>
             </p>
-            <p class="quotee">-and this is Who I Quoted</p>
+            <p class="quotee">-The Quoted One</p>
         </div>
+                                                    <!-- Click The Button -->
     </div>
     <div class="signup-section">
-        <div class="in-signup">
-            <h3>Press the button!</h3>
-            <p>Seriously do it</p>
-            <button>The button</button>
+        <div class="colored-part">
+            <div class="colored-part-text">
+            <h3>Press The Button!</h3>
+            <p>Seriously do it. That might be fun, right?</p>
+            </div>
+            <button>The Button</button>
         </div>
     </div>
                                         
                                                         <!-- Footer -->
 
     <div class="footer">
-        Copyright stuff
+        <a href="https://images.unsplash.com/photo-1511300636408-a63a89df3482?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8d2FsbHBhcGVyfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60">Top Section Image</a>
+        Copyrights
+        <a href="https://images.unsplash.com/photo-1508921912186-1d1a45ebb3c1?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8cGhvdG98ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60">Picture Section Image</a>
     </div>
 </div>
 </body>
