Write README and fix Footer

--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
                                                         <!-- Footer -->
 
     <div class="footer">
-        <a href="https://images.unsplash.com/photo-1511300636408-a63a89df3482?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8d2FsbHBhcGVyfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60">Top Section Image</a>
+        <a href="https://unsplash.com/photos/ruWkmt3nU58">Top Section Image</a>
         Copyrights
-        <a href="https://images.unsplash.com/photo-1508921912186-1d1a45ebb3c1?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8cGhvdG98ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60">Picture Section Image</a>
+        <a href="https://unsplash.com/photos/F_-0BxGuVvo">Picture Section Image</a>
     </div>
 </div>
 </body>
